[gd_scene load_steps=11 format=3 uid="uid://bw8xj7gm2nkdp"]

[ext_resource type="Script" uid="uid://bsugpqsggd76" path="res://main_screen/character_selection.gd" id="1_12345"]
[ext_resource type="Texture2D" uid="uid://ciay3mspqdggm" path="res://sprites/players/1.png" id="2_12345"]
[ext_resource type="Texture2D" uid="uid://cdtqb2lip1mym" path="res://sprites/players/2.png" id="3_12345"]
[ext_resource type="Texture2D" uid="uid://cgcfa6yhuhn6i" path="res://sprites/players/3.png" id="4_12345"]
[ext_resource type="FontFile" uid="uid://dll06tmq2mx0h" path="res://main_screen/font/retro.ttf" id="5_12345"]
[ext_resource type="AudioStream" uid="uid://cqlalskdcbqth" path="res://main_screen/sfx/hover_button_tick.wav" id="6_12345"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_PlayerHover"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_PlayerSelected"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_PlayerNormal"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.8, 0.2, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_12345")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_12345")
theme_override_font_sizes/font_size = 48
text = "CHOISIR VOTRE PERSONNAGE"
horizontal_alignment = 1

[node name="PlayersContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="PlayerContainer1" type="VBoxContainer" parent="PlayersContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="PlayerButton" type="Button" parent="PlayersContainer/PlayerContainer1"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/hover = SubResource("StyleBoxFlat_PlayerHover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_PlayerSelected")
theme_override_styles/normal = SubResource("StyleBoxFlat_PlayerNormal")
flat = true

[node name="PlayerSprite" type="Sprite2D" parent="PlayersContainer/PlayerContainer1/PlayerButton"]
position = Vector2(100, 100)
scale = Vector2(4, 4)
texture = ExtResource("2_12345")
hframes = 4
vframes = 5
frame = 1

[node name="PlayerLabel" type="Label" parent="PlayersContainer/PlayerContainer1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_12345")
theme_override_font_sizes/font_size = 24
text = "Player 1"
horizontal_alignment = 1

[node name="PlayerContainer2" type="VBoxContainer" parent="PlayersContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="PlayerButton" type="Button" parent="PlayersContainer/PlayerContainer2"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/hover = SubResource("StyleBoxFlat_PlayerHover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_PlayerSelected")
theme_override_styles/normal = SubResource("StyleBoxFlat_PlayerNormal")
flat = true

[node name="PlayerSprite" type="Sprite2D" parent="PlayersContainer/PlayerContainer2/PlayerButton"]
position = Vector2(100, 100)
scale = Vector2(4, 4)
texture = ExtResource("3_12345")
hframes = 4
vframes = 5
frame = 1

[node name="PlayerLabel" type="Label" parent="PlayersContainer/PlayerContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_12345")
theme_override_font_sizes/font_size = 24
text = "Player 2"
horizontal_alignment = 1

[node name="PlayerContainer3" type="VBoxContainer" parent="PlayersContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="PlayerButton" type="Button" parent="PlayersContainer/PlayerContainer3"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/hover = SubResource("StyleBoxFlat_PlayerHover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_PlayerSelected")
theme_override_styles/normal = SubResource("StyleBoxFlat_PlayerNormal")
flat = true

[node name="PlayerSprite" type="Sprite2D" parent="PlayersContainer/PlayerContainer3/PlayerButton"]
position = Vector2(100, 100)
scale = Vector2(4, 4)
texture = ExtResource("4_12345")
hframes = 4
vframes = 5
frame = 1

[node name="PlayerLabel" type="Label" parent="PlayersContainer/PlayerContainer3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_12345")
theme_override_font_sizes/font_size = 24
text = "Player 3"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -120.0
offset_right = 100.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_12345")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "JOUER"

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_12345")
volume_db = -20.0
